<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_link" translatable="false">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="message_email" translatable="false">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="message_theme" translatable="false">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="email" translatable="false">"maxbulmail@yandex.ru"</string>
    <string name="practicum_offer_link" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="error_message">Проблемы со связью\n
        \n
        Загрузка не удалась. Проверьте\n
        подключение к интернету</string>
    <string name="refresh">Обновить</string>

</resources>