<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MainActivity"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_main_activity" />


    <Button
        android:id="@+id/button1"
        style="@style/ActivityMainButtonTextStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:elevation="0dp"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/button2"
        style="@style/ActivityMainButtonTextStyle"
        android:layout_marginTop="16dp"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library" />

    <Button
        android:id="@+id/button3"
        style="@style/ActivityMainButtonTextStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>