<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp">

    <LinearLayout
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImageViewSettingsStyle"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            style="@style/TextViewSettingsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_main_activity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewSettingsStyle"
            android:layout_weight="5"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SwitchCompat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewSettingsStyle"
            android:layout_weight="8"
            android:text="@string/share_the_app" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="21dp"
            app:drawableLeftCompat="@drawable/ic_share" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewSettingsStyle"
            android:layout_weight="7"
            android:text="@string/write_to_support" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            app:drawableLeftCompat="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewSettingsStyle"
            android:layout_weight="9"
            android:text="@string/user_agreement" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            app:drawableLeftCompat="@drawable/ic_arrow_right" />

    </LinearLayout>

</LinearLayout>