<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_start_end"
        android:paddingEnd="@dimen/padding_start_end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/buttonBack"
                style="@style/ImageViewSettingsStyle"
                app:srcCompat="@drawable/ic_arrow" />

            <TextView
                style="@style/TextViewSettingsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search"
                android:textSize="@dimen/text_size_main_activity" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Search">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawablePadding="9dp"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="13dp"
                android:paddingTop="@dimen/padding_top_bottom"
                android:paddingBottom="@dimen/padding_top_bottom"
                android:singleLine="true"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_clear"
                android:theme="@style/Clear"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/text"
            style="@style/TextViewSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/you_searched"
            android:textSize="19sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
           />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/clear_history"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/placeholder"
                style="@style/ErrorMessageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="19sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonRefresh"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refresh"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
